# TugasAkhir

./: .gitignore  pyproject.toml
notebooks/: datapipeline.ipynb  model.ipynb
src/ablation/: dataset.py  model.py  train.py
src/htla/: dataset.py  model.py  train.py
