[project]
name = "tugasakhir"
version = "0.1.0"
description = ""
authors = [
    {name = "Tamara",email = "tmrjov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "scikit-multilearn (>=0.2.0,<0.3.0)",
    "transformers (>=5.4.0,<6.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "torch (>=2.7.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "tugasakhir", from = "src"}]

[[tool.poetry.source]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch-cu118"}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
